--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
     {% block page_header %}
     {% endblock %}
 
+    {% block content %}
+    {% endblock %}
+    
     {% block postloadjs %}
     {% endblock %}
 
