--- a/templates/base.html
+++ b/templates/base.html
@@ -2,40 +2,94 @@
 
 <!doctype html>
 <html lang="en">
-  <head>
 
-    {% block meta %}
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
+<head>
 
-    {% block corecss %}
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    {% endblock %}
+  {% block meta %}
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  {% endblock %}
 
-    {% block corejs %}
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-    {% endblock %}
+  {% block corecss %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+    integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  {% endblock %}
 
-    <title>Liquid Smoke {% block extra_title %}{% endblock %}</title>
-  </head>
-  <body>
-    <header class="container-fluid fixed-top"></header>
+  {% block corejs %}
+  <script src="https://kit.fontawesome.com/f5991483d4.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous">
+  </script>
+  {% endblock %}
 
-    {% if messages %}
-    <div class="message-container"></div>
-    {% endif %}
+  <title>Liquid Smoke {% block extra_title %}{% endblock %}</title>
+</head>
 
-    {% block page_header %}
-    {% endblock %}
+<body class="font-white">
+  <header class="container-fluid fixed-top p-0">
+    <nav class="navbar navbar-expand-lg navbar-light bg-nav font-white">
+      <a class="navbar-brand font-white mx-5" href="#">Liquid Smoke</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span><i class="fa-solid fa-bars font-white"></i></span>
+      </button>
+      <form class="form d-flex" method="GET" action="">
+        <div class="input-group w-100">
+          <input class="form-control me-2 border border-black rounded-0" type="text" name="q"
+            placeholder="Search our site">
+          <div class="input-group-append">
+            <button class="form-control form-control btn border border-black rounded-0" type="submit">
+              <span class="icon">
+                <i class="fas fa-search font-white"></i>
+              </span>
+            </button>
+          </div>
+        </div>
+      </form>
+      <div class="collapse navbar-collapse bg-nav" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto mr-3">
+          <li class="nav-item dropdown menu-item">
+            <a class="nav-link font-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+              Candles
+            </a>
+          </li>
+          <li class="nav-item dropdown menu-item">
+            <a class="nav-link font-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+              Essential Oils
+            </a>
+          </li>
+          <li class="nav-item dropdown menu-item">
+            <a class="nav-link font-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
+              All products
+            </a>
+          </li>
+          <li class="nav-item dropdown menu-item mx-lg-3">
+              <a href="#" class="nav-link font-white account-link">Sign In</a>
+              <span>or</span>
+              <a href="#" class="nav-link font-white account-link">Register</a>
+          </li>
+        </ul>
+      </div>
+      <a href="#" class="bag nav-item font-white menu-item"><i class="fa-solid fa-bag-shopping"></i> Bag</a>
+    </nav>
+  </header>
 
-    {% block content %}
-    {% endblock %}
-    
-    {% block postloadjs %}
-    {% endblock %}
+  {% if messages %}
+  <div class="message-container"></div>
+  {% endif %}
 
-  </body>
+  {% block page_header %}
+  {% endblock %}
+
+  {% block content %}
+  {% endblock %}
+
+  {% block postloadjs %}
+  {% endblock %}
+
+</body>
+
 </html>
