--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
   {% block corecss %}
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
     integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/base.css' %}">
   {% endblock %}
 
@@ -29,77 +30,89 @@
   <title>Liquid Smoke {% block extra_title %}{% endblock %}</title>
 </head>
 
-<body class="font-white">
-  <header class="container-fluid fixed-top bg-nav p-0">
-    <nav class="navbar navbar-expand-lg font-white">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span><i class="fa-solid fa-bars font-white"></i></span>
-      </button>
-      <a class="navbar-brand font-white ml-5 mr-auto p-3" href="#">Liquid Smoke</a>
-      <form class="form d-flex" method="GET" action="">
-        <div class="input-group w-100">
-          <input class="form-control me-2 border border-black rounded-0" type="text" name="q"
-            placeholder="Search our site">
-          <div class="input-group-append">
-            <button class="form-control form-control btn border border-black rounded-0" type="submit">
-              <span class="icon">
-                <i class="fas fa-search font-white"></i>
-              </span>
-            </button>
+<body>
+  <header class="container-fluid fixed-top bg-nav">
+    <div id="topnav" class="row pt-lg-2 d-none d-lg-flex">
+      <div class="col-12 col-lg-4 my-auto pl-5 py-lg-0 text-center text-lg-left">
+        <a href="{% url 'home' %}" class="nav-link logo">
+          <h2 class="text-white my-0">Liquid Smoke</h2>
+        </a>
+      </div>
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <form method="GET" action="#">
+          <div class="input-group w-100">
+            <input class="form-control border border-black rounded-0" type="text" name="q"
+              placeholder="Search our site">
+            <div class="input-group-append">
+              <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                <span class="icon">
+                  <i class="fas fa-search text-white"></i>
+                </span>
+              </button>
+            </div>
           </div>
-        </div>
-      </form>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto mr-3">
-          <li class="nav-item dropdown menu-item">
-            <a class="nav-link font-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              Candles
+        </form>
+      </div>
+      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+          <li class="list-inline-item dropdown">
+            <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
+              <div class="text-center">
+                <div><i class="fas fa-user fa-lg text-white"></i></div>
+                <p class="my-0 text-white">My Account</p>
+              </div>
             </a>
-          </li>
-          <li class="nav-item dropdown menu-item">
-            <a class="nav-link font-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              Essential Oils
-            </a>
-          </li>
-          <li class="nav-item dropdown menu-item">
-            <a class="nav-link font-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              Specials
-            </a>
-          </li>
-          <li class="nav-item dropdown menu-item">
-            <a class="nav-link font-white" href="#" role="button" data-toggle="dropdown" aria-expanded="false">
-              All products
-            </a>
-          </li>
-          <li class="nav-item dropdown menu-item mx-lg-3"><i class="fas fa-user fa-lg"></i>
-            {% if request.user.is_authenticated %}
+            <div class="dropdown-menu bg-nav" aria-labelledby="user-options">
+              {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
-                  <a href="#" class="nav-link font-white account-link">Product Management</a>
+              <a href="{% url 'add_product' %}" class="dropdown-item text-white">Product Management</a>
               {% endif %}
-              <a href="#" class="nav-link font-white account-link">My Profile</a>
-              <a href="{% url 'account_logout' %}" class="nav-link font-white account-link">Logout</a>
-            {% else %}
-              <a href="{% url 'account_login' %}" class="nav-link font-white account-link">Sign In</a>
-              <span>or</span>
-              <a href="{% url 'account_signup' %}" class="nav-link font-white account-link">Register</a>
-            {% endif %}
+              <a href="{% url 'profile' %}" class="dropdown-item text-white">My Profile</a>
+              <a href="{% url 'account_logout' %}" class="dropdown-item text-white">Logout</a>
+              {% else %}
+              <a href="{% url 'account_login' %}" class="dropdown-item text-white">Login</a>
+              <a href="{% url 'account_signup' %}" class="dropdown-item text-white">Register</a>
+              {% endif %}
+            </div>
+          </li>
+          <li class="list-inline-item">
+            <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="#">
+              <div class="text-center">
+                <div><i class="fas fa-shopping-bag fa-lg text-white"></i></div>
+                <p class="my-0 text-white">
+                  {% if grand_total %}
+                  ${{ grand_total|floatformat:2 }}
+                  {% else %}
+                  $0.00
+                  {% endif %}
+                </p>
+              </div>
+            </a>
           </li>
         </ul>
       </div>
-      <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link bag font-white ml-auto" href="#">
-        <div class="text-center">
-            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-            <p class="my-0">
-                {% if grand_total %}
-                    ${{ grand_total|floatformat:2 }}
-                {% else %}
-                    $0.00
-                {% endif %}
-            </p>
-        </div>
-      </a>
-    </nav>
+    </div>
+    <div class="row">
+      <div class="mx-auto">
+        <a href="{% url 'home' %}" class="nav-link">
+          <h3 class="text-white my-0 text-center text-align-center d-lg-none">Liquid Smoke</h3>
+        </a>
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-light w-100">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#main-nav"
+          aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
+          <span><i class="fa-solid fa-bars text-white"></i></span>
+        </button>
+        {% include 'includes/mobile-top-header.html' %}
+        {% include 'includes/desktop-top-header.html' %}
+      </nav>
+    </div>
   </header>
+
+
+
+
 
   {% if messages %}
   <div class="message-container"></div>
