--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -1,17 +1,20 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load custom_filters %}
 
 {% block content %}
   <div class="container mt-5">
     <h2 class="mb-4">Candles</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
       {% for candle in candles %}
-        <div class="col mb-4">
-          <div class="card h-100">
+      <div class="col mb-4">
+        <div class="card h-100">
+          <a href="{% url 'product_details' candle.id %}">
             <img src="{{ candle.image.url }}" class="card-img-top" alt="{{ candle.name }}">
+            <h5 class="card-title m-auto text-align-center">{{ candle.name }}</h5>
+          </a>
             <div class="card-body">
-              <h5 class="card-title">{{ candle.name }}</h5>
-              <p class="card-text">{{ candle.description }}</p>
+              <!-- <p class="card-text">{{ candle.description }}</p> -->
               <p class="card-text">Scent: {{ candle.scent }}</p>
               <p class="card-text">Burn time: {{ candle.burn_time }}</p>
               <p class="card-text"><small class="text-muted">Price: ${{ candle.price }}</small></p>
@@ -19,15 +22,15 @@
                 {% csrf_token %}
                 <label for="quantity">Quantity:</label>
                 <select id="quantity" name="quantity">
-                  
-                  <option value="{{ i }}">{{ i }}</option>
-                  
+                  {% for i in 10|make_range:1 %}
+                    <option value="{{ i }}">{{ i }}</option>
+                  {% endfor %}
                 </select>
                 <button type="submit" class="btn btn-primary">Add to Basket</button>
               </form>
             </div>
-          </div>
         </div>
+      </div>      
       {% empty %}
         <p>No candles found.</p>
       {% endfor %}
