--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -15,29 +15,38 @@
     <h2 class="mb-4">Candles</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
       {% for candle in candles %}
-      <div class="col mb-4">
-        <div class="card h-100">
-          <a href="{% url 'product_details' candle.id %}">
-            <img src="{{ candle.image.url }}" class="card-img-top" alt="{{ candle.name }}">
-            <h5 class="card-title m-auto text-align-center">{{ candle.name }}</h5>
-          </a>
-            <div class="card-body">
-              <p class="card-text">Scent: {{ candle.scent }}</p>
-              <p class="card-text">Burn time: {{ candle.burn_time }}</p>
-              <p class="card-text"><small class="text-muted">Price: ${{ candle.price }}</small></p>
-              <form method="POST" action="#">
-                {% csrf_token %}
-                <label for="quantity">Quantity:</label>
-                <select id="quantity" name="quantity">
-                  {% for i in 10|make_range:1 %}
-                    <option value="{{ i }}">{{ i }}</option>
-                  {% endfor %}
-                </select>
-                <button type="submit" class="btn btn-primary">Add to Basket</button>
-              </form>
-            </div>
-        </div>
-      </div>      
+        <div class="col mb-5">
+          <div class="card h-100">
+            <a href="{% url 'product_details' candle.id %}">
+              <img src="{{ candle.image.url }}" class="card-img-top" alt="{{ candle.name }}">
+              <h5 class="card-title py-3 text-dark text-center">{{ candle.name }}</h5>
+            </a>
+              <div class="card-body">
+                <p class="card-text">Scent: {{ candle.scent }}</p>
+                <p class="card-text">Burn time: {{ candle.burn_time }}</p>
+                <p class="card-text"><small class="text-muted">Price: ${{ candle.price }}</small></p>
+                <p class="text-muted">
+                  <i class="fas fa-star mr-1"></i>
+                  {% if candle.avg_rating %}
+                    {{ candle.avg_rating|floatformat:1 }} / 5
+                  {% else %}
+                    No rating
+                  {% endif %}
+                </p>
+                <hr>
+                <form method="POST" action="#">
+                  {% csrf_token %}
+                  <label for="quantity">Quantity:</label>
+                  <select id="quantity" name="quantity">
+                    {% for i in 10|make_range:1 %}
+                      <option value="{{ i }}">{{ i }}</option>
+                    {% endfor %}
+                  </select>
+                  <button type="submit" class="btn btn-primary">Add to Basket</button>
+                </form>
+              </div>
+          </div>
+        </div>    
       {% empty %}
         <p>No candles found.</p>
       {% endfor %}
@@ -45,16 +54,35 @@
     <h2 class="my-4">Essential Oils</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
       {% for oil in essential_oils %}
-        <div class="col mb-4">
+        <div class="col mb-5">
           <div class="card h-100">
             <a href="{% url 'product_details' oil.id %}">
               <img src="{{ oil.image.url }}" class="card-img-top" alt="{{ oil.name }}">
-              <h5 class="card-title m-auto text-align-center">{{ oil.name }}</h5>
+              <h5 class="card-title py-3 text-dark text-center">{{ oil.name }}</h5>
             </a>
             <div class="card-body">
               <p class="card-text">Scent: {{ oil.scent }}</p>
               <p class="card-text">Volume: {{ oil.volume }}</p>
               <p class="card-text"><small class="text-muted">Price: ${{ oil.price }}</small></p>
+              <p class="text-muted">
+                <i class="fas fa-star mr-1"></i>
+                {% if oil.avg_rating %}
+                  {{ oil.avg_rating|floatformat:1 }} / 5
+                {% else %}
+                  No rating
+                {% endif %}
+              </p>
+              <hr>
+                <form method="POST" action="#">
+                  {% csrf_token %}
+                  <label for="quantity">Quantity:</label>
+                  <select id="quantity" name="quantity">
+                    {% for i in 10|make_range:1 %}
+                      <option value="{{ i }}">{{ i }}</option>
+                    {% endfor %}
+                  </select>
+                  <button type="submit" class="btn btn-primary">Add to Basket</button>
+                </form>
             </div>
           </div>
         </div>
