--- a/static/css/base.css
+++ b/static/css/base.css
@@ -54,6 +54,12 @@ body {
     text-decoration: underline;
 }
 
+.card-img-top {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
 @media (max-width: 992px) {
     .account-link {
         display: block;
