--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,8 +3,23 @@ html {
 }
 
 body {
-    padding-top: 150px;
+    padding-top: 145px;
     font-family: 'Lora', serif;
+}
+
+/* ********** HOME PAGE *********** */
+
+.hero {
+    background-image: url('/media/product_images/pexels-photo-6954560.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 70vh;
+    padding-top: 20px;
+}
+
+.newsletter {
+    background-color: yellow;
 }
 
 .bg-nav {
