--- a/templates/includes/desktop-top-header.html
+++ b/templates/includes/desktop-top-header.html
@@ -1,28 +1,16 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="#" id="all-products-link"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Candles
-            </a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="#">Candles</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="#" id="all-products-link"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Essential Oils
-            </a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="#">Essential Oils</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="#" id="all-products-link"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Specials
-            </a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="#">Specials</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="#" id="all-products-link"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                All products
-            </a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'products' %}">All products</a>
         </li>
     </ul>
 </div>
