--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,8 +18,14 @@ body {
     padding-top: 20px;
 }
 
+.links {
+    background-color: rgb(81, 124, 128);
+    padding: 20px;
+}
+
 .newsletter {
     background-color: yellow;
+    padding: 20px;
 }
 
 .bg-nav {
@@ -74,6 +80,13 @@ body {
     height: 300px;
     object-fit: cover;
 }
+
+@media (max-width: 767px) {
+    hr.d-none {
+      display: block !important;
+    }
+  }
+
 
 @media (max-width: 992px) {
     .account-link {
