--- a/templates/includes/desktop-top-header.html
+++ b/templates/includes/desktop-top-header.html
@@ -1,7 +1,7 @@
 <div class="collapse navbar-collapse" id="main-nav">
     <ul class="navbar-nav w-auto mx-auto">
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="#">Candles</a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'candles' %}">Candles</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-cat text-white nav-link text-black mr-5" href="#">Essential Oils</a>
