--- a/templates/includes/desktop-top-header.html
+++ b/templates/includes/desktop-top-header.html
@@ -4,7 +4,7 @@
             <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'candles' %}">Candles</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="#">Essential Oils</a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'essential_oils' %}">Essential Oils</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-cat text-white nav-link text-black mr-5" href="#">Specials</a>
