Build the specials view/url/template

--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -22,7 +22,7 @@
                         <h4 class="card-title">Candles</h4>
                         <p class="card-text">Explore our selection of hand-poured candles made with 100% soy wax and
                             pure essential oils.</p>
-                        <a href="" class="btn btn-primary">Shop Now</a>
+                        <a href="{% url 'candles' %}" class="btn btn-primary">Shop Now</a>
                     </div>
                 </div>
                 <hr class="d-none">
@@ -35,7 +35,7 @@
                         <h4 class="card-title">Essential Oils</h4>
                         <p class="card-text">Discover our collection of pure essential oils, perfect for aromatherapy
                             and natural healing.</p>
-                        <a href="#" class="btn btn-primary">Shop Now</a>
+                        <a href="{% url 'essential_oils' %}" class="btn btn-primary">Shop Now</a>
                     </div>
                 </div>
             </div>
