--- a/templates/includes/desktop-top-header.html
+++ b/templates/includes/desktop-top-header.html
@@ -7,10 +7,11 @@
             <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'essential_oils' %}">Essential Oils</a>
         </li>
         <li class="nav-item dropdown">
-            <a class="nav-cat text-white nav-link text-black mr-5" href="#">Specials</a>
+            <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'specials' %}">Specials</a>
         </li>
         <li class="nav-item dropdown">
             <a class="nav-cat text-white nav-link text-black mr-5" href="{% url 'products' %}">All products</a>
         </li>
     </ul>
 </div>
+  
