--- a/catalog/templates/home/products.html
+++ b/catalog/templates/home/products.html
@@ -3,14 +3,28 @@
 {% load custom_filters %}
 
 {% block content %}
-  <div class="container mt-5">
-    <div class="col-12 col-md-6 order-md-first">
-      <p class="text-muted mt-3 text-center text-md-left">
-          {% if search_term or current_categories or current_sorting != 'None_None' %}
-              <span class="small"><a href="{% url 'home' %}">Home</a> | </span>
-          {% endif %}
-          {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
-      </p>
+  <div class="container mt-3">
+    <div class="row mt-1 mb-2">
+      <div class="col-12 col-md-6 my-auto order-md-last d-flex justify-content-center justify-content-md-end">
+        <div class="sort-select-wrapper w-50">
+            <select id="sort-selector" class="form-select">
+              <option value="reset" {% if not request.GET.q and not request.GET.sort %} selected {% endif %}>Sort by</option>
+              <option value="name_asc" {% if request.GET.sort == 'name' and request.GET.direction == 'asc' %} selected {% endif %}>Name (A-Z)</option>
+              <option value="name_desc" {% if request.GET.sort == 'name' and request.GET.direction == 'desc' %} selected {% endif %}>Name (Z-A)</option>
+              <option value="price_asc" {% if request.GET.sort == 'price' and request.GET.direction == 'asc' %} selected {% endif %}>Price (Low to High)</option>
+              <option value="price_desc" {% if request.GET.sort == 'price' and request.GET.direction == 'desc' %} selected {% endif %}>Price (High to Low)</option>
+              <option value="rating_desc" {% if request.GET.sort == 'avg_rating' and request.GET.direction == 'desc' %} selected {% endif %}>Rating (High to Low)</option>
+          </select>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 order-md-first">
+        <p class="text-muted mt-3 text-center text-md-left">
+            {% if search_term or current_categories or current_sorting != 'None_None' %}
+                <span class="small"><a href="{% url 'products' %}">All products</a> | </span>
+            {% endif %}
+            {{ products|length }} Products{% if search_term %} found for <strong>"{{ search_term }}"</strong>{% endif %}
+        </p>
+      </div>
     </div>
     <h2 class="mb-4">Candles</h2>
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
@@ -91,4 +105,41 @@
       {% endfor %}
     </div>
   </div>
+  <div class="btt-button shadow-sm rounded-0 border border-black">
+    <a class="btt-link d-flex h-100">
+        <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
+    </a>	
+  </div>
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+		$('.btt-link').click(function(e) {
+			window.scrollTo(0,0)
+		})
+	  </script>
+    
+    <script type="text/javascript">
+        $('#sort-selector').change(function() {
+            var selector = $(this);
+            var currentUrl = new URL(window.location);
+
+            var selectedVal = selector.val();
+            if(selectedVal != "reset"){
+                var sort = selectedVal.split("_")[0];
+                var direction = selectedVal.split("_")[1];
+
+                currentUrl.searchParams.set("sort", sort);
+                currentUrl.searchParams.set("direction", direction);
+
+                window.location.replace(currentUrl);
+            } else {
+                currentUrl.searchParams.delete("sort");
+                currentUrl.searchParams.delete("direction");
+
+                window.location.replace(currentUrl);
+            }
+        })
+    </script>
 {% endblock %}
