--- a/static/css/base.css
+++ b/static/css/base.css
@@ -11,6 +11,7 @@ body {
 /* ********** HOME PAGE *********** */
 
 .hero {
+    /* background-image: url('s3://eddiestn-liquid-smoke/media/product_images/pexels-photo-6954560.jpeg'); */
     background-image: url('/media/product_images/pexels-photo-6954560.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -35,6 +36,11 @@ body {
 
 .bg-white {
     background-color: white;
+}
+
+.strike {
+    color: rgb(209, 121, 121) !important;
+    text-decoration: line-through;
 }
 
 .logo {
@@ -93,6 +99,7 @@ body {
 .btt-link {
     cursor: pointer;
 }
+
 
 @media (max-width: 767px) {
     hr.d-none {
