--- a/catalog/templates/home/essential_oils.html
+++ b/catalog/templates/home/essential_oils.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load custom_filters %}
+{% block extra_title %}/ Essential Oils {% endblock %}
 
 {% block content %}
   <div class="container mt-5">
@@ -24,7 +25,11 @@
             <div class="card-body">
               <p class="card-text">Scent: {{ oil.scent }}</p>
               <p class="card-text">Volume: {{ oil.volume }}</p>
+              {% if oil.discounted_price %}
+              <p class="card-text"><small class="text-muted">Price: <span class="strike">${{ oil.price }}</span> -> ${{ oil.discounted_price }}</small></p>
+              {% else %}
               <p class="card-text"><small class="text-muted">Price: ${{ oil.price }}</small></p>
+              {% endif %}
               <p class="text-muted">
                 <i class="fas fa-star mr-1"></i>
                 {% if oil.avg_rating %}
