--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -53,7 +53,7 @@
 </section>
 
 <section>
-    <div class="container newsletter">
+    <div class="container newsletter col-md-4">
         <h2>Subscribe to our Newsletter</h2>
         <p>Stay up-to-date on our latest products and promotions by subscribing to our newsletter</p>
         <form action="#">
