--- a/catalog/templates/home/product_details.html
+++ b/catalog/templates/home/product_details.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load custom_filters %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 <div class="container my-5">
@@ -10,9 +11,11 @@
         <div class="col-md-6">
             <h1>{{ product.name }}</h1>
             <p>{{ product.description }}</p>
-            <p>Price: {{ product.price }}</p>
             {% if product.discounted_price %}
-            <p>Discounted price: {{ product.discounted_price }}</p>
+            <p class="card-text"><small class="text-muted">Price: <span class="strike">${{ product.price }}</span> -> ${{ product.discounted_price }}</small></p>
+            {% else %}
+            <p class="card-text"><small class="text-muted">Price: ${{ product.price }}</small></p>
+            {% endif %}
             <p class="text-muted">
                 <i class="fas fa-star mr-1"></i>
                 {% if candle.avg_rating %}
@@ -21,16 +24,15 @@
                   No rating
                 {% endif %}
               </p>
-            {% endif %}
             {% if request.user.is_authenticated %}
-            <form method="POST" action="">
+            <form method="POST" class="form-inline" action="">
                 {% csrf_token %}
-                {{ basket_form.as_p }}
-                <button type="submit" class="btn btn-primary">Add to basket</button>
+                {{ basket_form|crispy }}
+                <button type="submit" class="btn btn-primary ml-2" name="basket_form">Add to basket</button>
             </form>
             {% endif %}
             {% if request.user.is_authenticated and request.user.is_superuser %}
-            <div>
+            <div class="mt-3">
                 <a href="{% url 'edit_product' product.id %}" class="btn btn-primary">Edit</a>
                 <a href="{% url 'delete_product' product.id %}" class="btn btn-danger">Delete</a>
             </div>
@@ -77,7 +79,7 @@
                         {% endfor %}
                     </select>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary" name="review_form">Submit</button>
             </form>
             {% else %}
             <p>Please <a href="{% url 'account_login' %}">log in</a> to leave a review.</p>
