--- a/catalog/templates/home/products.html
+++ b/catalog/templates/home/products.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load custom_filters %}
+{% block extra_title %}/ All Products {% endblock %}
 
 {% block content %}
   <div class="container mt-3">
@@ -38,7 +39,11 @@
               <div class="card-body">
                 <p class="card-text">Scent: {{ candle.scent }}</p>
                 <p class="card-text">Burn time: {{ candle.burn_time }}</p>
+                {% if candle.discounted_price %}
+                <p class="card-text"><small class="text-muted">Price: <span class="strike">${{ candle.price }}</span> -> ${{ candle.discounted_price }}</small></p>
+                {% else %}
                 <p class="card-text"><small class="text-muted">Price: ${{ candle.price }}</small></p>
+                {% endif %}
                 <p class="text-muted">
                   <i class="fas fa-star mr-1"></i>
                   {% if candle.avg_rating %}
@@ -77,7 +82,11 @@
             <div class="card-body">
               <p class="card-text">Scent: {{ oil.scent }}</p>
               <p class="card-text">Volume: {{ oil.volume }}</p>
+              {% if oil.discounted_price %}
+              <p class="card-text"><small class="text-muted">Price: <span class="strike">${{ oil.price }}</span> -> ${{ oil.discounted_price }}</small></p>
+              {% else %}
               <p class="card-text"><small class="text-muted">Price: ${{ oil.price }}</small></p>
+              {% endif %}
               <p class="text-muted">
                 <i class="fas fa-star mr-1"></i>
                 {% if oil.avg_rating %}
