--- a/static/css/base.css
+++ b/static/css/base.css
@@ -100,6 +100,13 @@ body {
     cursor: pointer;
 }
 
+.jumbotron {
+    /* background-image: url('s3://eddiestn-liquid-smoke/media/product_images/pexels-photo-5650048.jpeg'); */
+    background-image: url('/media/product_images/pexels-photo-5650048.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
 
 @media (max-width: 767px) {
     hr.d-none {
