Build Add to basket functionality but it failed

--- a/catalog/templates/home/index.html
+++ b/catalog/templates/home/index.html
@@ -6,7 +6,7 @@
     <div class="container">
         <h1>Welcome to our candle and essential oils store</h1>
         <h4>Shop our selection of hand-poured candles and pure essential oils</h4>
-        <a href="{% url 'products' %}" class="btn btn-primary">Shop Now</a>
+        <h4 class="mt-5">See our latest <a href="{% url 'specials' %}" class="text-white">Offers</a></h4>
     </div>
 </section>
 
